# TranslatorWebApp-APIs

./: .gitignore  README.md  app.py  buildozer.spec  database_structre.txt  flet.app  healthcare_translator.db  healthcare_translator.py  healthcare_translator_backend.py  healthcare_translator_ui.py  main.py  manifest.json  pubspec.yaml  pyproject.toml  requirements.txt
.github/workflows/: master_universal-translator.yml
__pycache__/: app.rustpython-01.pyc.19957696
assets/: manifest.json
static/css/: auth.css  styles.css
static/js/: main.js
templates/: index.html  login.html  privacy_policy.html  register.html
